<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:background="@color/background_color"
    android:fitsSystemWindows="true"
    tools:context=".ui.home.CreatingPortfolioActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/namePortfolio"
        android:textColor="@color/button_color"
        android:textSize="16sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_portfolio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/editTextViewStyle"
        android:layout_marginBottom="30dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_portfolio_text_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:paddingLeft="10dp"
            android:inputType= "text" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/typeBrokerAccount"
        android:textColor="@color/button_color"
        android:textSize="16sp"/>

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/spinner_type_broker_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.Spinner.Underlined"
        android:spinnerMode="dropdown"
        android:padding="0dp"
        android:prompt="@string/namePortfolio"
        android:hint="@string/typeOfBrokerAccount"
        android:theme="@style/editTextViewStyle"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Broker"
        android:textColor="@color/button_color"
        android:textSize="16sp"/>

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/spinner_broker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.Spinner.Underlined"
        android:spinnerMode="dropdown"
        android:padding="0dp"
        android:prompt="@string/namePortfolio"
        android:hint="@string/typeOfBrokerAccount"
        android:theme="@style/editTextViewStyle"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dateOfCreateAccount"
        android:textColor="@color/button_color"
        android:textSize="16sp"/>

    <DatePicker
        android:id="@+id/datePicker_portfolioCreation"
        android:theme="@style/MyDatePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="30dp"
        android:calendarTextColor="@color/button_color"
        android:calendarViewShown="false"
        android:datePickerMode="spinner" />

    <Button
        android:id="@+id/but_create_portfolio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/createPortfolio"
        android:background="@color/button_color"
        android:foreground="?android:attr/selectableItemBackground"
        android:textColor="@color/text_color"
        android:padding="10dp"
        android:layout_gravity="center_horizontal"/>



</androidx.appcompat.widget.LinearLayoutCompat>